Added: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # Set your own environement variables
 # This file will be LOADED everytime you do flask run
+# rename this file to .env to take effect
 FLASK_ENV=development
 FLASK_APP=main.py:app
 FLASK_APP_SECRET=mysecret
 DATABASE_NAME=db
-DATABASE_HOST=ec2-3-1-218-113.ap-southeast-1.compute.amazonaws.com
+DATABASE_HOST=mysql-db
 DATABASE_USERNAME=root
-DATABASE_PASSWORD=tiger
+DATABASE_PASSWORD=8complement
