Initial commit for incident

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@
 # This file will be LOADED everytime you do flask run
 # rename this file to .env to take effect
 FLASK_ENV=development
-FLASK_APP=main.py:app
+FLASK_APP=main.py
 FLASK_APP_SECRET=mysecret
 DATABASE_NAME=db
-DATABASE_HOST=mysql-db
+DATABASE_HOST=localhost
 DATABASE_USERNAME=root
-DATABASE_PASSWORD=8complement
+DATABASE_PASSWORD=Matcha0709
