--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bcrypt==3.1.6
 cffi==1.12.2
 Click==7.0
 Flask==1.0.2
+Flask-JWT-Extended==3.18.0
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.3.2
 itsdangerous==1.1.0
@@ -10,6 +11,7 @@ Jinja2==2.10
 MarkupSafe==1.1.1
 mysqlclient==1.4.2.post1
 pycparser==2.19
+PyJWT==1.4.2
 python-dateutil==2.8.0
 python-dotenv==0.10.1
 python-editor==1.0.4
