--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.1
-mysqlclient==1.4.2
+mysqlclient==1.4.2.post1
 pycparser==2.19
 PyJWT==1.4.2
 python-dateutil==2.8.0
