--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ MarkupSafe==1.1.1
 mysqlclient==1.4.2.post1
 pycparser==2.19
 PyJWT==1.4.2
+PySocks==1.6.8
 python-dateutil==2.8.0
 python-dotenv==0.10.1
 python-editor==1.0.4
@@ -22,5 +23,6 @@ pytz==2018.9
 requests==2.21.0
 six==1.12.0
 SQLAlchemy==1.3.0
+twilio==6.26.0
 urllib3==1.24.1
 Werkzeug==0.14.1
