--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cffi==1.12.2
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+Flask-Cors==3.0.7
 Flask-JWT-Extended==3.18.0
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.3.2
