--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ aniso8601==6.0.0
 appdirs==1.4.3
 attrs==19.1.0
 bcrypt==3.1.6
+beautifulsoup4==4.7.1
+bs4==0.0.1
 certifi==2019.3.9
 cffi==1.12.2
 chardet==3.0.4
@@ -31,6 +33,7 @@ pytz==2018.9
 requests==2.21.0
 requests-oauthlib==1.2.0
 six==1.12.0
+soupsieve==1.9.1
 SQLAlchemy==1.3.0
 toml==0.10.0
 twilio==6.26.0
