--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 aniso8601==6.0.0
 appdirs==1.4.3
+APScheduler==3.6.0
 attrs==19.1.0
 bcrypt==3.1.6
 beautifulsoup4==4.7.1
+blinker==1.4
 bs4==0.0.1
 certifi==2019.3.9
 cffi==1.12.2
@@ -11,6 +13,7 @@ Click==7.0
 Flask==1.0.2
 Flask-Cors==3.0.7
 Flask-JWT-Extended==3.18.0
+Flask-Mail==0.9.1
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.3.2
 future==0.17.1
@@ -37,5 +40,6 @@ soupsieve==1.9.1
 SQLAlchemy==1.3.0
 toml==0.10.0
 twilio==6.26.0
+tzlocal==1.5.1
 urllib3==1.24.1
 Werkzeug==0.14.1
