--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aniso8601==6.0.0
 appdirs==1.4.3
+APScheduler==3.6.0
 attrs==19.1.0
 bcrypt==3.1.6
 certifi==2019.3.9
@@ -34,5 +35,6 @@ six==1.12.0
 SQLAlchemy==1.3.0
 toml==0.10.0
 twilio==6.26.0
+tzlocal==1.5.1
 urllib3==1.24.1
 Werkzeug==0.14.1
