--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2019.3.9
 cffi==1.12.2
 chardet==3.0.4
 Click==7.0
+facebook-sdk==3.1.0
 Flask==1.0.2
 Flask-Cors==3.0.7
 Flask-JWT-Extended==3.18.0
