--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,15 @@ Flask-Mail==0.9.1
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.3.2
 future==0.17.1
+gevent==1.4.0
+greenlet==0.4.15
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
+locustio==0.11.0
 MarkupSafe==1.1.1
 marshmallow==3.0.0rc5
+msgpack==0.6.1
 mysqlclient==1.4.2.post1
 oauthlib==3.0.1
 pycodestyle==2.5.0
@@ -34,6 +38,7 @@ python-dotenv==0.10.1
 python-editor==1.0.4
 python-twitter==3.5
 pytz==2018.9
+pyzmq==18.0.1
 requests==2.21.0
 requests-oauthlib==1.2.0
 six==1.12.0
